test/scc/expr/semantic-errors/148.a
148.t:6:16: error: too many initializer values